--- a/meson.build
+++ b/meson.build
@@ -340,7 +340,8 @@ winsock           = platform_windows ? cc.find_library('ws2_32') : no_dep
 atk_minver        = '2.4.0'
 atk               = dependency('atk',                version: '>='+atk_minver)
 babl_minver       = '0.1.78'
-babl              = dependency('babl',               version: '>='+babl_minver)
+babl_dep              = dependency('babl', version: '>='+babl_minver, fallback: ['babl', 'libbabl_dep'])
+
 cairo_minver      = '1.12.2'
 cairo             = dependency('cairo',              version: '>='+cairo_minver)
 
@@ -353,7 +354,7 @@ freetype2         = dependency('freetype2',          version: '>='+freetype2_min
 gdk_pixbuf_minver = '2.30.8'
 gdk_pixbuf        = dependency('gdk-pixbuf-2.0',     version: '>='+gdk_pixbuf_minver)
 gegl_minver       = '0.4.24'
-gegl              = dependency('gegl-0.4',           version: '>='+gegl_minver)
+gegl              = dependency('gegl-0.4',           version: '>='+gegl_minver, fallback:['gegl', 'libgegl_dep'])
 gexiv2_minver     = '0.10.6'
 gexiv2            = dependency('gexiv2',             version: '>='+gexiv2_minver)
 
@@ -753,9 +754,9 @@ endif
 
 have_vala = add_languages('vala', required: get_option('vala-plugins'))
 if have_vala
-  babl = declare_dependency(
+  babl_dep = declare_dependency(
     dependencies: [
-      babl,
+      babl_dep,
       meson.get_compiler('vala').find_library('babl-0.1'),
     ]
   )
